--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -188,6 +188,18 @@
           pointer-events: auto;
         }
         #start-screen h1 { font-size: 48px; color: var(--highlight); margin-bottom: 20px; text-transform: uppercase; letter-spacing: 4px; text-shadow: 0 0 10px var(--highlight); }
+
+        .start-container { display:flex; gap:20px; background:rgba(20, 25, 40, 0.95); padding:20px; border-radius:10px; border:1px solid #444; max-width: 800px;}
+        .start-panel { width:300px; }
+        .server-panel { width:300px; border-left:1px solid #444; padding-left:20px; display:flex; flex-direction:column; }
+
+        /* Server List Styles */
+        .server-list-item { background:rgba(0,0,0,0.3); padding:8px; margin-bottom:5px; border:1px solid #333; font-size:12px; cursor:pointer; display:flex; align-items:center; justify-content:space-between; transition:0.2s; }
+        .server-list-item:hover { background:rgba(255,255,255,0.05); }
+        .server-list-item.active { border-color:var(--highlight); box-shadow:inset 0 0 5px rgba(243, 156, 18, 0.2); }
+        .server-status-icon { width:12px; height:12px; margin-right:8px; display:flex; align-items:center; justify-content:center; }
+        .spin-loader { border: 2px solid #555; border-top: 2px solid #fff; border-radius: 50%; width: 10px; height: 10px; animation: spin 1s linear infinite; }
+
         /* Notification/Error Popup */
         #notification-area { position: absolute; top: 20px; right: 180px; width: 300px; display: flex; flex-direction: column; gap: 10px; pointer-events: none; z-index: 200; }
         .toast { background: rgba(30, 30, 30, 0.95); border-left: 4px solid var(--accent); padding: 12px; color: white; pointer-events: auto; animation: slideIn 0.3s ease; box-shadow: 0 4px 10px rgba(0,0,0,0.5); font-size: 14px; }
@@ -246,21 +258,44 @@
         <!-- Start Screen -->
         <div id="start-screen">
             <h1>Mega Miner</h1>
-            <div style="background: var(--panel-bg); padding: 30px; border-radius: 10px; width: 300px; border: 1px solid #444;">
-                <div class="form-group">
-                    <label>Username</label>
-                    <input type="text" id="start-username" value="Miner1" maxlength="12">
+            <div class="start-container">
+                <div class="start-panel">
+                    <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" id="start-username" value="Miner1" maxlength="12">
+                    </div>
+                    <div class="form-group">
+                        <label>Room ID</label>
+                        <input type="text" id="start-room" value="public-mine-1">
+                    </div>
+                    <div class="form-group">
+                        <label>Vehicle Color</label>
+                        <input type="color" id="start-color" value="#3498db" style="height:40px;">
+                    </div>
+                    <button class="btn" onclick="Game.init()">LAUNCH MISSION</button>
+                    <button class="btn" style="margin-top:10px; background:#444;" onclick="UI.openSettings()">SETTINGS / IMPORT</button>
                 </div>
-                <div class="form-group">
-                    <label>Room ID</label>
-                    <input type="text" id="start-room" value="public-mine-1">
+
+                <div class="server-panel">
+                    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
+                        <label style="margin:0; font-size:12px; color:#aaa;">SERVER STATUS</label>
+                        <button class="btn btn-small" style="width:auto; padding:2px 5px;" onclick="UI.refreshServerList()">&#8635;</button>
+                    </div>
+                    <div id="server-list-sidebar" style="flex:1; overflow-y:auto; max-height:200px; margin-bottom:10px;">
+                        <!-- Injected via JS -->
+                    </div>
+
+                    <div class="form-group" style="margin-bottom:0;">
+                        <label>Add Custom Server</label>
+                        <div style="display:flex; gap:5px;">
+                            <input type="text" id="custom-server-input" placeholder="wss://..." style="font-size:11px;">
+                            <button class="btn btn-small" style="width:auto;" onclick="UI.addCustomServer()">+</button>
+                        </div>
+                    </div>
+                    <div style="margin-top:10px; font-size:10px; color:#e74c3c; line-height:1.4; background:rgba(231, 76, 60, 0.1); padding:5px; border:1px solid #e74c3c;">
+                        <strong>WARNING:</strong> You must select the SAME server as your friends to see them. Check status before joining.
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label>Vehicle Color</label>
-                    <input type="color" id="start-color" value="#3498db" style="height:40px;">
-                </div>
-                <button class="btn" onclick="Game.init()">LAUNCH MISSION</button>
-                <button class="btn" style="margin-top:10px; background:#444;" onclick="UI.openSettings()">SETTINGS / IMPORT</button>
             </div>
         </div>
 
@@ -371,22 +406,9 @@
             </div>
 
             <div class="form-group">
-                <label>Multiplayer Broker</label>
-                <div style="display:flex; gap:5px; margin-bottom:5px;">
-                    <select id="server-list" onchange="$('setting-broker').value = this.value" style="flex:1;">
-                        <option value="wss://broker.emqx.io:8084/mqtt">EMQX Public (WSS)</option>
-                        <option value="ws://broker.emqx.io:8083/mqtt">EMQX Public (WS)</option>
-                        <option value="wss://broker.hivemq.com:8000">HiveMQ Public (WSS)</option>
-                        <option value="wss://mqtt.eclipseprojects.io:443/mqtt">Eclipse (WSS)</option>
-                        <option value="wss://test.mosquitto.org:8081">Mosquitto (WSS)</option>
-                        <option value="wss://cloud.mqtt.cool/mqtt">MQTT.cool (WSS)</option>
-                        <option value="ws://localhost:8083/mqtt">Localhost (WS)</option>
-                    </select>
-                    <button class="btn btn-small" style="width:auto;" onclick="UI.checkServers()">Check Status</button>
-                </div>
-                <div id="server-status-display" style="margin-bottom:5px; font-size:11px; max-height:60px; overflow-y:auto; background:#222; padding:5px; display:none;"></div>
-                <input type="text" id="setting-broker" placeholder="wss://broker.emqx.io:8084/mqtt">
-                <small style="color:#777;">No effect while playing. Reload to change.</small>
+                <label>Active Broker (Set in Start Screen)</label>
+                <input type="text" id="setting-broker" placeholder="wss://broker.emqx.io:8084/mqtt" disabled style="opacity:0.7">
+                <small style="color:#777;">Reload to change connection.</small>
             </div>
 
             <div class="form-group">
@@ -449,8 +471,8 @@
 
 <script>
 /**
- * MEGA MINER ONLINE v3.5
- * Updates: Unlimited Saves, IndexedDB Overhaul
+ * MEGA MINER ONLINE v3.6
+ * Updates: Server Sidebar, Status Checks, Connection Stability Fixes
  */
 
 // --- UTILS ---
@@ -776,7 +798,16 @@ class GameEngine {
         if(localStorage.getItem('mm_username')) $('start-username').value = localStorage.getItem('mm_username');
         if(localStorage.getItem('mm_room_id')) $('start-room').value = localStorage.getItem('mm_room_id');
         if(localStorage.getItem('mm_veh_color')) $('start-color').value = localStorage.getItem('mm_veh_color');
-        if(localStorage.getItem('mm_broker_url')) $('setting-broker').value = localStorage.getItem('mm_broker_url');
+
+        // Load broker from storage or use default if none
+        const storedBroker = localStorage.getItem('mm_broker_url');
+        if (storedBroker) {
+            this.settings.broker = storedBroker;
+            $('setting-broker').value = storedBroker;
+        } else {
+            // Ensure input matches default if nothing stored
+            $('setting-broker').value = this.settings.broker;
+        }
 
         const showCoords = localStorage.getItem('mm_show_coords');
         if(showCoords === 'true') { $('coords-toggle').checked = true; this.toggleCoords(true); }
@@ -852,17 +883,8 @@ class GameEngine {
         UI.refreshKeybindLabels();
         UI.checkForUpdates();
 
-        this.running = true;
-        this.localPlayer.gridX = Math.floor(CONSTANTS.MAP_WIDTH / 2);
-        this.localPlayer.gridY = 4;
-        this.localPlayer.x = this.localPlayer.gridX * CONSTANTS.TILE_SIZE;
-        this.localPlayer.y = this.localPlayer.gridY * CONSTANTS.TILE_SIZE;
-        this.localPlayer.stats.startTime = now();
-
-        Sound.init();
-
         // Start a new session tracking
-        SaveSystem.currentSaveId = Date.now();
+        if (!SaveSystem.currentSaveId) SaveSystem.currentSaveId = Date.now();
     }
 
     logConnection(msg) {
@@ -874,8 +896,25 @@ class GameEngine {
     }
 
     finishConnection() {
+        // Critical: Do not re-initialize game state if we just reconnected
+        if (this.running) {
+            console.log("Reconnected to broker. Game state preserved.");
+            $('connection-screen').style.display = 'none';
+            // Just broadcast position to sync up
+            Network.broadcastMove();
+            return;
+        }
+
         setTimeout(async () => {
             $('connection-screen').style.display = 'none';
+
+            this.running = true;
+            this.localPlayer.gridX = Math.floor(CONSTANTS.MAP_WIDTH / 2);
+            this.localPlayer.gridY = 4;
+            this.localPlayer.x = this.localPlayer.gridX * CONSTANTS.TILE_SIZE;
+            this.localPlayer.y = this.localPlayer.gridY * CONSTANTS.TILE_SIZE;
+            this.localPlayer.stats.startTime = now();
+            Sound.init();
 
             // Check if we are host and load save if exists
             this.updateAdminStatus();
@@ -1768,7 +1807,7 @@ class ShopSystem {
                 p.money -= cost;
                 if (item === 'hull') { p.maxHull += 20; p.hull = p.maxHull; }
                 if (item === 'fuel') { p.maxFuel += 20; p.fuel = p.maxFuel; }
-                if (item === 'cargo') p.maxCargo += 10;
+                if (item === 'cargo') p.maxCargo += 20;
                 if (item === 'cool') p.heatResist++;
                 if (item === 'xray') p.xrayRange++;
                 UI.showToast("Upgraded!", "success");
@@ -2042,6 +2081,20 @@ class InputManager {
 // --- UI & SAVES ---
 
 class UIManager {
+    constructor() {
+        this.defaultServers = [
+            "wss://broker.emqx.io:8084/mqtt",
+            "ws://broker.emqx.io:8083/mqtt",
+            "wss://broker.hivemq.com:8000",
+            "wss://mqtt.eclipseprojects.io:443/mqtt",
+            "wss://test.mosquitto.org:8081",
+        ];
+        this.customServers = JSON.parse(localStorage.getItem('mm_custom_servers') || '[]');
+
+        // Init server list on load
+        setTimeout(() => this.refreshServerList(), 500);
+    }
+
     rndMsg(type) { const arr = MSGS[type]; return arr[Math.floor(Math.random() * arr.length)]; }
     addMessage(name, text, color='#fff') {
         const div = document.createElement('div');
@@ -2073,36 +2126,87 @@ class UIManager {
         }
     }
 
-    checkServers() {
-        const list = $('server-list');
-        const display = $('server-status-display');
-        display.style.display = 'block';
-        display.innerHTML = 'Checking servers...';
+    // --- SERVER LIST LOGIC ---
+    refreshServerList() {
+        const list = $('server-list-sidebar');
+        list.innerHTML = '';
 
-        let promises = [];
-        Array.from(list.options).forEach(opt => {
-            const url = opt.value;
-            const p = new Promise(resolve => {
-                try {
-                    const client = mqtt.connect(url, { connectTimeout: 2000, reconnectPeriod: 0 });
-                    client.on('connect', () => { client.end(); resolve({url, status: true}); });
-                    client.on('error', () => { client.end(); resolve({url, status: false}); });
-                    setTimeout(() => { if(!client.connected){ client.end(); resolve({url, status: false}); } }, 2500);
-                } catch(e) { resolve({url, status: false}); }
-            });
-            promises.push(p);
-        });
+        // Merge defaults and custom
+        const allServers = [...new Set([...this.defaultServers, ...this.customServers])];
 
-        Promise.all(promises).then(results => {
-            display.innerHTML = '';
-            results.forEach(res => {
-                const div = document.createElement('div');
-                div.className = 'server-option';
-                div.innerHTML = `<span class="status-dot ${res.status ? 'green':'red'}"></span> ${res.url}`;
-                display.appendChild(div);
-            });
+        allServers.forEach(url => {
+            const isActive = url === Game.settings.broker;
+            const item = document.createElement('div');
+            item.className = `server-list-item ${isActive ? 'active' : ''}`;
+            item.innerHTML = `
+                <div style="display:flex; align-items:center; overflow:hidden;">
+                    <div class="server-status-icon" id="status-${btoa(url).replace(/=/g,'')}"><div class="spin-loader"></div></div>
+                    <span style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">${url}</span>
+                </div>
+            `;
+            item.onclick = () => this.selectServer(url);
+            list.appendChild(item);
+
+            // Ping server
+            this.checkServerStatus(url);
         });
     }
+
+    selectServer(url) {
+        Game.settings.broker = url;
+        localStorage.setItem('mm_broker_url', url);
+        $('setting-broker').value = url;
+        this.refreshServerList(); // Redraw to update active class
+        this.showToast("Server Selected. Launch to Connect.", "normal");
+    }
+
+    addCustomServer() {
+        const input = $('custom-server-input');
+        const url = input.value.trim();
+        if(url && (url.startsWith('ws://') || url.startsWith('wss://'))) {
+            if(!this.customServers.includes(url) && !this.defaultServers.includes(url)) {
+                this.customServers.push(url);
+                localStorage.setItem('mm_custom_servers', JSON.stringify(this.customServers));
+                input.value = '';
+                this.refreshServerList();
+                this.showToast("Server Added", "success");
+            } else {
+                this.showToast("Server already exists", "error");
+            }
+        } else {
+            this.showToast("Invalid URL (Must start with ws:// or wss://)", "error");
+        }
+    }
+
+    checkServerStatus(url) {
+        const id = `status-${btoa(url).replace(/=/g,'')}`;
+        const el = $(id);
+        if(!el) return;
+
+        let failedTimeout = setTimeout(() => { if(!client.connected) setStatus(false); }, 10000);
+
+        const client = mqtt.connect(url, { connectTimeout: 9500, reconnectPeriod: 0 });
+
+        const setStatus = (success) => {
+            if(el) {
+                el.innerHTML = success
+                    ? `<span style="color:#2ecc71; font-weight:bold;">&#10003;</span>`
+                    : `<span style="color:#e74c3c; font-weight:bold;">&#10007;</span>`;
+            }
+            client.end();
+        };
+
+        client.on('connect', () => {setStatus(true);clearTimeout(failedTimeout);});
+        client.on('error', () => setStatus(false));
+        client.on('close', () => {clearTimeout(failedTimeout);}); // silent
+
+    }
+
+    checkServers() {
+        // Legacy settings modal check
+        this.refreshServerList();
+    }
+
     async checkForUpdates() {
         try {
             if (!initialTimestamp) {
@@ -2602,7 +2706,7 @@ const creditsData = {
         "The laptops that were sacrificed in the making of this game"
     ]
 };
-//J ANK AUDIO FIX
+// JANK AUDIO FIX
 Sound.loadSettings()
 // bruh
 document.getElementById('credits').innerHTML = generateCreditsHTML(creditsData);
