--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -471,8 +471,8 @@
 
 <script>
 /**
- * MEGA MINER ONLINE v3.6
- * Updates: Server Sidebar, Status Checks, Connection Stability Fixes
+ * MEGA MINER ONLINE v3.7
+ * Updates: Fixed Minimap scaling, Linux Gamer Messages, Day/Night Fix
  */
 
 // --- UTILS ---
@@ -517,11 +517,39 @@ const TILE_PROPS = {
 };
 
 const MSGS = {
-    join: ["spawned in.", "is here to steal your ores.", "slid into the server.", "woke up.", "has entered the chat."],
-    leave: ["rage quit.", "went to touch grass.", "timed out (RIP).", "vanished.", "was consumed by the void."],
-    kick: ["was yeeted.", "read the TOS wrong.", "was shown the door."],
-    ban: ["has been banished to the shadow realm.", "caught the ban hammer."],
-    death: ["forgot to breathe.", "became bedrock.", "was crushed by capitalism.", "needs a tutorial."],
+    join: [
+        "spawned in.",
+        "slid into the server.",
+        "has entered the chat.",
+        "compiled successfully.",
+        "sudo joined the game.",
+        "initialized connection.",
+        "mounted the filesystem.",
+        "pinged the server."
+    ],
+    leave: [
+        "rage quit.",
+        "timed out (RIP).",
+        "received SIGTERM.",
+        "failed to compile.",
+        "segfaulted.",
+        "kernel panic.",
+        "unmounted.",
+        "disconnected by peer."
+    ],
+    kick: ["was yeeted.", "read the TOS wrong.", "was shown the door.", "lost sudo privileges."],
+    ban: ["has been banished to the shadow realm.", "caught the ban hammer.", "was added to the blacklist."],
+    death: [
+        "forgot to breathe.",
+        "became bedrock.",
+        "needs a tutorial.",
+        "touched grass (Fatal Error).",
+        "rm -rf /'d themselves.",
+        "is not in the sudoers file.",
+        "forgot to chmod +x their life.",
+        "experienced a stack overflow.",
+        "dereferenced a null pointer."
+    ],
     rescue: ["is running on fumes!", "needs a fuel stim!", "is signaling SOS!"]
 };
 
@@ -1345,7 +1373,8 @@ class GameEngine {
         // -------------------------------
         const skyRadius = 900;
         const centerX = this.camera.x;
-        const centerY = groundY - 300; // horizon
+        // Fix: Pivot exactly at ground level so sunrise/sunset looks correct
+        const centerY = groundY;
 
         const sunX = centerX + Math.cos(sunAngle) * skyRadius;
         const sunY = centerY + Math.sin(sunAngle) * skyRadius;
@@ -1599,44 +1628,66 @@ class GameEngine {
     }
 
     drawLocalMinimap() {
-        this.minimapCtx.fillStyle = '#000'; this.minimapCtx.fillRect(0, 0, 150, 150);
-        const range = Math.floor(30 / this.zoom);
-        const center = 75;
-        const pX = this.localPlayer.gridX; const pY = this.localPlayer.gridY;
-        const pixelSize = Math.max(2, 2 * this.zoom); // Better visibility
+        const ctx = this.minimapCtx;
+        const width = 150;
+        const height = 150;
+        ctx.fillStyle = '#000'; ctx.fillRect(0, 0, width, height);
 
-        for (let dy = -range; dy <= range; dy++) {
-            for (let dx = -range; dx <= range; dx++) {
-                let mx = pX + dx; let my = pY + dy;
+        // Fixed Minimap Settings (Independent of Zoom)
+        const range = 25; // 25 tile radius = 50 tile diameter view
+        const pixelSize = width / (range * 2); // 150 / 50 = 3px per tile exact
+        const center = width / 2;
+
+        const pX = this.localPlayer.gridX;
+        const pY = this.localPlayer.gridY;
+
+        for (let dy = -range; dy < range; dy++) {
+            for (let dx = -range; dx < range; dx++) {
+                let mx = pX + dx;
+                let my = pY + dy;
+                // Boundary checks
                 if (mx >= 0 && mx < CONSTANTS.MAP_WIDTH && my >= 0 && my < CONSTANTS.MAP_HEIGHT) {
                     if (this.discovered[my][mx]) {
                         let tile = this.map[my][mx];
-                        this.minimapCtx.fillStyle = tile === TILE_TYPES.EMPTY ? '#111' : TILE_PROPS[tile].color;
-                        this.minimapCtx.fillRect(center + dx*pixelSize, center + dy*pixelSize, pixelSize, pixelSize);
+                        ctx.fillStyle = tile === TILE_TYPES.EMPTY ? '#111' : TILE_PROPS[tile].color;
+                        // Use 3x3 pixel rects
+                        ctx.fillRect(Math.floor(center + dx * pixelSize), Math.floor(center + dy * pixelSize), pixelSize, pixelSize);
                     }
                 }
             }
         }
-        // Viewport Border
-        this.minimapCtx.strokeStyle = "rgba(255,255,255,0.3)";
-        this.minimapCtx.lineWidth = 1;
-        let vw = (this.canvas.width / CONSTANTS.TILE_SIZE / this.zoom) * pixelSize;
-        let vh = (this.canvas.height / CONSTANTS.TILE_SIZE / this.zoom) * pixelSize;
-        this.minimapCtx.strokeRect(center - vw/2, center - vh/2, vw, vh);
 
-        this.minimapCtx.fillStyle = '#e74c3c'; this.minimapCtx.fillRect(center-2, center-2, 5, 5); // Me
+        // Viewport Border calculation needs to map GAME View to MINIMAP Coordinates
+        // Game View Width (in tiles) = CanvasWidth / (TileSize * Zoom)
+        ctx.strokeStyle = "rgba(255,255,255,0.5)";
+        ctx.lineWidth = 1;
 
-        // Remote Players
+        const gameViewTilesW = this.canvas.width / (CONSTANTS.TILE_SIZE * this.zoom);
+        const gameViewTilesH = this.canvas.height / (CONSTANTS.TILE_SIZE * this.zoom);
+
+        // Convert tiles to pixels on the minimap
+        const miniMapRectW = gameViewTilesW * pixelSize;
+        const miniMapRectH = gameViewTilesH * pixelSize;
+
+        ctx.strokeRect(center - miniMapRectW/2, center - miniMapRectH/2, miniMapRectW, miniMapRectH);
+
+        // Player Dot (Always Center)
+        ctx.fillStyle = '#e74c3c';
+        ctx.fillRect(center - 2, center - 2, 4, 4);
+
+        // Remote players... mapped to minimap scale
         Object.values(this.remotePlayers).forEach(rp => {
-            let dx = rp.gridX - pX; let dy = rp.gridY - pY;
-            if(Math.abs(dx) <= range && Math.abs(dy) <= range) {
-                this.minimapCtx.fillStyle = '#3498db';
-                this.minimapCtx.fillRect(center + dx*pixelSize -1, center + dy*pixelSize -1, 4, 4);
-                // Draw ID/Name tooltip if needed, but clean dots are better for minimaps
-                if(!rp.username) {
-                     this.minimapCtx.fillStyle = "#fff"; this.minimapCtx.font = "8px Arial";
-                     this.minimapCtx.fillText(rp.id.substr(0,4), center + dx*pixelSize, center + dy*pixelSize - 5);
-                }
+            let dx = rp.gridX - pX;
+            let dy = rp.gridY - pY;
+
+            // Only draw if within minimap range
+            if(Math.abs(dx) < range && Math.abs(dy) < range) {
+                const screenX = center + dx * pixelSize;
+                const screenY = center + dy * pixelSize;
+                ctx.fillStyle = '#3498db';
+                ctx.fillRect(screenX - 2, screenY - 2, 4, 4);
+
+                // Optional: Tooltip logic if needed, omitted for cleanliness
             }
         });
     }
