--- a/megaminer/index.html
+++ b/megaminer/index.html
@@ -434,7 +434,7 @@
                         <input type="checkbox" id="coords-toggle" onchange="Game.toggleCoords(this.checked)"> Show Coordinates
                     </label>
                 </div>
-                <button class="btn btn-small" style="margin-top:5px; background:#444;" onclick="Network.requestMap()">Force Map Sync</button>
+                <button class="btn btn-small" style="margin-top:5px; background:#444;" onclick="Network.requestMap(Game.localPlayer.id)">Force Map Sync</button>
             </div>
 
             <div class="form-group">
@@ -480,6 +480,7 @@
     <div id="notification-area"></div>
 
 <script>
+//!summaryignore
 const $ = id => document.getElementById(id);
 
 // Robust UUID Generator (longer for collision avoidance)
@@ -584,7 +585,7 @@ const MSGS = {
 };
 
 let initialTimestamp = null;
-
+//!endsummaryignore
 // --- SOUND ENGINE ---
 class SoundManager {
     constructor() {
@@ -1544,7 +1545,7 @@ class GameEngine {
 
                 if (visible || xray) this.drawProceduralTile(x, y, tile, xray && !visible);
                 else if (this.discovered[y][x]) {
-                    this.ctx.globalAlpha = 0.3;
+                    this.ctx.globalAlpha = 0.9;
                     this.drawProceduralTile(x, y, tile, false);
                     this.ctx.globalAlpha = 1.0;
                 }
@@ -1740,8 +1741,8 @@ class GameEngine {
         ctx.strokeRect(center - miniMapRectW/2, center - miniMapRectH/2, miniMapRectW, miniMapRectH);
 
         // Player Dot (Always Center)
-        ctx.fillStyle = '#e74c3c';
-        ctx.fillRect(center - 2, center - 2, 4, 4);
+        ctx.fillStyle = Game.settings.color;
+        ctx.fillRect(center, center, 3, 3);
 
         // Remote players... mapped to minimap scale
         Object.values(this.remotePlayers).forEach(rp => {
@@ -1936,7 +1937,7 @@ class ShopSystem {
         this.updateUI();
     }
 }
-
+//!summaryignore
 // --- NETWORK (MQTT) ---
 class NetworkManager {
     constructor() {
@@ -2303,21 +2304,20 @@ class UIManager {
     refreshServerList() {
         const list = $('server-list-sidebar');
         list.innerHTML = '';
-            <div class="form-group">
-                <label>Options</label>
-                <div style="display:flex; gap:15px;">
-                    <label style="display:inline-flex; align-items:center; text-transform:none; color:#eee;">
-                        <input type="checkbox" id="autosave-toggle" checked onchange="SaveSystem.toggleAutosave(this.checked)"> Autosave (60s)
-                    </label>
-                    <label style="display:inline-flex; align-items:center; text-transform:none; color:#eee;">
-                        <input type="checkbox" id="update-check-toggle" checked> Autocheck Updates (60s)
-                    </label>
-                    <label style="display:inline-flex; align-items:center; text-transform:none; color:#eee;">
-                        <input type="checkbox" id="coords-toggle" onchange="Game.toggleCoords(this.checked)"> Show Coordinates
-                    </label>
-                </div>
-                <button class="btn btn-small" style="margin-top:5px; background:#444;" onclick="Network.requestMap()">Force Map Sync</button>
-            </div>
+
+        // Render helper
+        const renderItem = (url, isCustom) => {
+            const isActive = url === Game.settings.broker;
+            const item = document.createElement('div');
+            item.className = `server-list-item ${isActive ? 'active' : ''}`;
+
+            let buttonsHtml = '';
+            if(isCustom) {
+                buttonsHtml = `
+                   <div class="server-actions">
+                       <button class="btn btn-small" style="padding:2px 5px; background:#444; font-size:10px; margin:0;" onclick="event.stopPropagation(); UI.editCustomServer('${url}')" title="Edit">&#9998;</button>
+                       <button class="btn btn-small" style="padding:2px 5px; background:#c0392b; font-size:10px; margin:0;" onclick="event.stopPropagation(); UI.removeCustomServer('${url}')" title="Remove">&times;</button>
+                   </div>
                 `;
             }
 
